# game_of_live

./: .gitignore  README.md  __init__.py  grid_state.npy  grid_state_mid_zoom.npy  main.py  pyproject.toml
assets/: generate_sfx.py  generate_trailer_music.py
core/: __init__.py  controller.py  game_controller.py  game_model.py  meta_controller.py  model.py  pattern_analyzer.py  sound_manager.py  view.py
core/analysis/: pattern_analyzer.py
core/models/: achievement.py  rule.py
core/services/: achievement_manager.py  notification_service.py  rule_manager.py  sound_manager.py  tutorial_manager.py
docs/: tutorial-script.md
ui/: __init__.py  button.py  colors.py  grid.py  icons.py  marker_manager.py  notification_manager.py  overlay.py  popup.py  sidebar.py  utils.py
utils/: __init__.py  settings.py
